welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() 
{
	var n = getMondeHauteur()
	var tableau = new Array[Color](n)

	for(i<-0 to (n-1) )    // Boucle for pour récuperer la couleur de chaque case et la stocker dans un tableau
	{
		tableau(i)= getCouleurSol()
		avance()	
	}

	for(k<-1 to (n-1))
	{
		gauche()
		avance()
		droite()
		avance()

		for(l<-0 to (n-1))
		{
			marquerSol(tableau(i))
               avance()
			
		}
	}

	
	
}


def marquerSol(c:Color)
{
	setCouleurBrosse(c)
	leveBrosse()
	baisseBrosse()
	
}

